css/style.css
/* ... */
@media (min-width: 320px) {
  .tp-caption.rs-caption-1,
  .tp-caption.rs-caption-2,
  .tp-caption.rs-caption-3 {
    width: 90%;
  }
}

@media (min-width: 768px) {
  .tp-caption.rs-caption-1,
  .tp-caption.rs-caption-2,
  .tp-caption.rs-caption-3 {
    width: 85%;
  }
}

@media (min-width: 992px) {
  .tp-caption.rs-caption-1,
  .tp-caption.rs-caption-2,
  .tp-caption.rs-caption-3 {
    width: 70%;
  }
}

@media (min-width: 1200px) {
  .tp-caption.rs-caption-1,
  .tp-caption.rs-caption-2,
  .tp-caption.rs-caption-3 {
    width: 55%;
  }
}

.tp-caption.rs-caption-1 a.btn-primary, .tp-caption.rs-caption-1 a.btn-primary:hover, .tp-caption.rs-caption-1 a.btn-primary:focus,
.tp-caption.rs-caption-2 a.btn-primary,
.tp-caption.rs-caption-2 a.btn-primary:hover,
.tp-caption.rs-caption-2 a.btn-primary:focus,
.tp-caption.rs-caption-3 a.btn-primary,
.tp-caption.rs-caption-3 a.btn-primary:hover,
.tp-caption.rs-caption-3 a.btn-primary:focus {
  color: #ffffff;
  height: 35px;
  line-height: 35px;
  padding: 0 10px;
}

@media (min-width: 768px) {
  .tp-caption.rs-caption-1 a.btn-primary, .tp-caption.rs-caption-1 a.btn-primary:hover, .tp-caption.rs-caption-1 a.btn-primary:focus,
  .tp-caption.rs-caption-2 a.btn-primary,
  .tp-caption.rs-caption-2 a.btn-primary:hover,
  .tp-caption.rs-caption-2 a.btn-primary:focus,
  .tp-caption.rs-caption-3 a.btn-primary,
  .tp-caption.rs-caption-3 a.btn-primary:hover,
  .tp-caption.rs-caption-3 a.btn-primary:focus {
    padding: 0 10px;
    margin-top: -20px;
  }
}

@media (min-width: 992px) {
  .tp-caption.rs-caption-1 a.btn-primary, .tp-caption.rs-caption-1 a.btn-primary:hover, .tp-caption.rs-caption-1 a.btn-primary:focus,
  .tp-caption.rs-caption-2 a.btn-primary,
  .tp-caption.rs-caption-2 a.btn-primary:hover,
  .tp-caption.rs-caption-2 a.btn-primary:focus,
  .tp-caption.rs-caption-3 a.btn-primary,
  .tp-caption.rs-caption-3 a.btn-primary:hover,
  .tp-caption.rs-caption-3 a.btn-primary:focus {
    height: 45px;
    line-height: 45px;
    padding: 0 20px;
  }
}

.tp-caption.rs-caption-1 {
  text-transform: capitalize;
  font-weight: 700;
}

@media (min-width: 320px) {
  .tp-caption.rs-caption-1 {
    font-size: 30px !important;
    line-height: 2px !important;
    padding: 0 10px !important;
  }
}

@media (min-width: 768px) {
  .tp-caption.rs-caption-1 {
    font-size: 45px !important;
    line-height: 40px !important;
    padding: 0;
  }
}

@media (min-width: 992px) {
  .tp-caption.rs-caption-1 {
    font-size: 50px !important;
    line-height: 40px !important;
  }
}

.tp-caption.rs-caption-1 span {
  color: #BD002F;
}

.tp-caption.rs-caption-2 {
  font-weight: 400;
}

@media (min-width: 320px) {
  .tp-caption.rs-caption-2 {
    font-size: 15px !important;
    line-height: 17px !important;
    padding: 0 10px !important;
  }
}

@media (min-width: 768px) {
  .tp-caption.rs-caption-2 {
    display: block;
    font-size: 14px !important;
    line-height: 17px !important;
    padding: 0;
  }
}

@media (min-width: 1200px) {
  .tp-caption.rs-caption-2 {
    font-size: 25px !important;
    line-height: 31px !important;
  }
}

.tp-caption.rs-caption-2,
.tp-caption.rs-caption-3 {
  padding: 0 10px !important;
}

.fullscreenbanner .tp-dottedoverlay.twoxtwo {
  background: transparent;
  background-image: none !important;
  z-index: 1;
}

.tparrows.preview4 {
  width: 47px;
  height: 47px;
}

.tparrows.preview4:after {
  line-height: 47px;
  width: 47px;
  height: 47px;
  background-color: #ffffff;
  color: #666666;
  border-radius: 13px;
  box-shadow: 0 4px 0 rgba(0, 0, 0, 0.2);
}

.tp-rightarrow.preview4 {
  right: 3% !important;
}

.tp-rightarrow.preview4:after {
  content: '\e81e';
}

.tp-leftarrow.preview4 {
  left: 3% !important;
}

.tp-leftarrow.preview4:after {
  content: '\e81f';
}

/*=== 5.2 FEATURES SECTION ===*/
.featureSection {
  position: relative;
}

@media (min-width: 320px) {
  .featureSection {
    padding: 50px 0;
  }
}

@media (min-width: 768px) {
  .featureSection {
    padding: 60px 0;
  }
}

.linkIcon, .locateArrow {
  display: block;
  position: absolute;
  left: 50%;
  margin-left: -50px;
  transition: all 0.3s ease-in-out;
}

.linkSection {
  width: 100%;
  z-index: 500;
}

@media (min-width: 320px) {
  .linkSection {
    position: relative;
  }
}

@media (min-width: 768px) {
  .linkSection {
    margin-top: -90px;
  }
}

.sectionLink {
  width: 100%;
  height: 190px;
  display: block;
  border-radius: 13px;
  text-align: center;
  transition: all 0.3s ease-in-out;
  box-shadow: 0 4px 0 rgba(0, 0, 0, 0.1);
}

.sectionLink .linkIcon {
  width: 100px;
  height: 100px;
  border-radius: 100%;
  background-color: #ffffff;
  border-width: 6px;
  border-style: solid;
  top: -50px;
  font-size: 30px;
  line-height: 90px;
  color: #666666;
}

.sectionLink .linkText {
  line-height: 190px;
  display: block;
  font-family: 'Dosis', sans-serif;
  font-size: 32px;
  font-weight: 400;
  color: #ffffff;
  letter-spacing: 1px;
}

.sectionLink .locateArrow {
  font-size: 18px;
  color: #ffffff;
  bottom: 27px;
  margin-left: -10px;
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=$value)";
  filter: alpha(opacity=0);
  -moz-opacity: 0;
  -khtml-opacity: 0;
  opacity: 0;
}

@media (min-width: 320px) {
  .sectionLink {
    margin-bottom: 75px;
  }
}

@media (min-width: 768px) {
  .sectionLink {
    margin-bottom: 0;
  }
}

.sectionLink:hover .border-color-1 {
  color: #f0c24b;
}

.sectionLink:hover .border-color-2 {
  color: #b5d56a;
}

.sectionLink:hover .border-color-3 {
  color: #BD002F;
}

.sectionLink:hover .border-color-4 {
  color: #84bed6;
}

.sectionLink:hover .locateArrow {
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=$value)";
  filter: alpha(opacity=1);
  -moz-opacity: 1;
  -khtml-opacity: 1;
  opacity: 1;
}
/* ... */

